# yesod-servant-swagger-example

./: .gitignore  Api.hs  Database.hs  Main.hs  config.json  package.yaml  stack.yaml  yesod-servant-test.cabal
src/: Api.hs  AppM.hs  Database.hs  EmbeddedAPI.hs  EmbeddedApi.hs  Handlers.hs  Main.hs  Model.hs
static/: apidocs.html
