name:               yesod-servant-test
version:            0.0.0
cabal-version:      >= 1.8
build-type:         Simple

executable          yesod-servant-test
  main-is:          Main.hs
  hs-source-dirs:   src

  ghc-options:      -Wall -fwarn-tabs -O2

  build-depends:  base
                , yesod
                , yesod-core
                , yesod-static
                , wai
                , servant-server
                , text
                , swagger2
                , servant-swagger >= 1.1
                , lens
                , persistent
                , persistent-postgresql  
                , persistent-sqlite
                , persistent-template
                , monad-logger
                , transformers
                , either
                , resource-pool
                , mtl
                , aeson
                , bytestring
                , esqueleto

  ghc-options:    -threaded -O2 -rtsopts -with-rtsopts=-N
